--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -1,129 +1,162 @@
+@define-color darkgrey #606060;
+@define-color whiteu   #FFFFFF;
+@define-color warning  #FF7070;
+@define-color indigo1  #4c539f;
+@define-color indigo2  rgba(9, 7, 31, 0.7);
+@define-color indigo3  rgba(9, 7, 31, 1.0);
+@define-color resize   #10aa70;
+
 * {
   border: none;
   border-radius: 0;
   min-height: 0;
-  font-family: "Ubuntu";
+  margin: 0;
+  padding: 0;
+  box-shadow: none;
+  text-shadow: none;
+}
+
+@keyframes blink-critical-text {
+  to {
+    color: @warning;
+  }
+}
+
+/* Keyframes for 1st bar modifiers */
+@keyframes blink-modifier-text {
+  to {
+    color: @resize;
+  }
+}
+
+#waybar.main {
+  background: @indigo2;
+  color: @white;
+  font-family: "JetBrainsMono Nerd Font";
   font-size: 13px;
   font-weight: bold;
-  color: #d8d8d8; /* neutral light */
 }
 
-window#waybar {
+#waybar.main button {
+  font-family: "JetBrainsMono Nerd Font";
+  font-size: 13px;
+  font-weight: bold;
+  transition: all 0.15s ease-in-out;
+}
+
+#waybar.main #clock,
+#waybar.main #cpu,
+#waybar.main #memory,
+#waybar.main #disk,
+#waybar.main #battery,
+#waybar.main #mode,
+#waybar.main #pulseaudio,
+#waybar.main #window,
+#waybar.main #bluetooth,
+#waybar.main #backlight,
+#waybar.main #wireplumber,
+#waybar.main #network,
+#waybar.main #temperature,
+#waybar.main #clock,
+#waybar.main #tray {
+  padding-left: 8pt;
+  padding-right: 8pt;
+  margin-bottom: 3px;
   background: transparent;
-  transition-property: background-color;
-  transition-duration: 0.5s;
+  color: @white;
 }
 
-window#waybar.hidden {
-  opacity: 0.5;
+#waybar.main #network.info {
+  padding-right: 10px;
+  padding-left: 10px;
+  color: @warning;
 }
 
-#workspaces {
-  background-color: transparent;
+#waybar.main #network.info.wifi.normal,
+#waybar.main #network.info.ethernet {
+  color: @white;
+  padding-right: 15px;
 }
 
-#workspaces button {
-  all: initial;
-  min-width: 0;
-  box-shadow: inset 0 -3px transparent;
-  padding: 2px 8px;
-  margin: 4px 3px;
-  border-radius: 4px;
-  background-color: #2c2c2c;
-  color: #d8d8d8;
+#waybar.main #network.info.wifi {
+  color: @warning;
+  padding-right: 15px;
 }
 
-#workspaces button.focused {
-  background-color: rgba(108, 138, 164, 0.4); /* desaturated blue */
-  box-shadow: inset 0 -1.5px #6c8aa4;
+#waybar.main #workspaces button.urgent,
+#waybar.main #workspaces button.special,
+#waybar.main #memory.critical,
+#waybar.main #cpu.critical,
+#waybar.main #temperature.critical,
+#waybar.main #battery.critical.discharging {
+  color: @white;
+  animation-iteration-count: infinite;
+  animation-direction: alternate;
+  animation-name: blink-critical-text;
+  animation-duration: 1s;
+  animation-timing-function: steps(15);
 }
 
-#workspaces button.active {
-  color: #1e1e1e;
-  background-color: #d8d8d8;
+#waybar.main #mode {
+  color: @white;
+  animation-iteration-count: infinite;
+  animation-direction: alternate;
+  animation-name: blink-modifier-text;
+  animation-duration: 1s;
+  animation-timing-function: steps(15);
 }
 
-#workspaces button:hover {
-  box-shadow: inset 0 -1.5px #d1a672; /* Soft amber line */
-  color: #d8d8d8;
-  background-color: #353535;
+#waybar.main #pulseaudio.muted,
+#waybar.main #pulseaudio.source-muted,
+#waybar.main #battery.warning.discharging {
+  color: @warning;
 }
 
-#workspaces button.urgent {
-  background-color: #a45b5b; /* muted red */
+#waybar.main #workspaces button {
+  color: @darkgrey;
+  background: transparent;
+  font-size: 13px;
+  padding-left: 5px;
+  padding-right: 5px;
+  border-radius: 20px;
+  margin-bottom: 3px;
+  margin-top: 3px;
+  margin-left: 3px;
+  margin-right: 3px;
+  transition: 0.25s ease;
 }
 
-#cpu,
-#memory,
-#disk,
-#battery,
-#backlight,
-#wireplumber,
-#network,
-#temperature,
-#clock,
-#tray {
-  border-radius: 4px;
-  margin: 4px 3px;
-  padding: 2px 8px;
-  background-color: #1e1e1e;
-  color: #d8d8d8;
+#waybar.main #workspaces button.visible {
+  color: @white;
+  background: @indigo1;
 }
 
-#cpu,
-#disk,
-#memory {
-  background-color: #2c2c2c;
-  color: #d8d8d8;
+#waybar.main #workspaces button:hover {
+  color: @white;
 }
 
-#battery {
-  background-color: #a45b5b;
-}
-
-#battery.critical,
-#battery.urgent {
-  background-color: #ff5f5f;
-  color: #fff0b3;
-}
-
-#battery.warning {
-  background-color: rgba(209, 166, 114, 0.4); /* amber-ish */
-}
-
-#battery.charging {
-  background-color: #8c977d; /* muted olive */
-  color: #1e1e1e;
-}
-
-#temperature {
-  background-color: #a45b5b;
-}
-
-#backlight {
-  background-color: #d1a672;
-}
-
-#wireplumber {
-  background-color: #6c8aa4;
-}
-
-#network {
-  background-color: #8c977d;
-  padding-right: 17px;
-}
-
-#clock {
-  background-color: #6c8aa4;
+#waybar.main #custom-spacer1,
+#waybar.main #custom-spacer2,
+#waybar.main #custom-spacer3 {
+  font-size: 12pt;
+  color: @darkgrey;
+  background: transparent;
 }
 
 tooltip {
-  border-radius: 8px;
-  padding: 15px;
-  background-color: #1e1e1e;
+  background: @indigo3;
+  border: 3px solid @indigo1;
+  border-radius: 10px;
 }
 
-tooltip label {
-  padding: 5px;
-  background-color: #1e1e1e;
+#waybar.indicator {
+  font-size: 2px; /* This makes indicator thicker */
+  color: rgba(0, 0, 0, 0);
+  background: @indigo1;
+}
+
+#waybar.indicator #battery.critical.discharging,
+#waybar.indicator #battery.warning.discharging {
+  background: @warning;
+  margin-right: -2305px;
 }
